--- a/app/assets/stylesheets/module/area_main_block.scss
+++ b/app/assets/stylesheets/module/area_main_block.scss
@@ -1,4 +1,5 @@
 .area-main-block {
+  margin-top: 160px;
   width: 100vw;
   display: flex;
 }
@@ -52,6 +53,7 @@
 @media (max-width: 767px) {
   .area-main-block {
     display: block;
+    margin-top: 130px;
   }
 
   .heritage-cards-block {
