--- a/app/assets/stylesheets/module/area_page_header.scss
+++ b/app/assets/stylesheets/module/area_page_header.scss
@@ -1,9 +1,22 @@
 .area-page-header {
-  margin-top: 180px;
+  position: fixed;
+  top: 80px;
+  left: 0;
+  right: 0;
+  width: 100vw;
+  height: 60px;
+  background-color: #fff;
+  z-index: 100;
+}
+.area-page-header-block {
+  width: 90vw;
+  margin: 0 auto;
+  padding: auto 0;
 }
 
 @media (max-width: 767px) {
-  .area-page-header {
-    margin-top: 120px;
+  .area-page-header-block {
+    width: 100vw;
+    padding: 0 10px;
   }
 }
