--- a/app/assets/stylesheets/module/heritage_create_form.scss
+++ b/app/assets/stylesheets/module/heritage_create_form.scss
@@ -12,7 +12,7 @@
     text-align: center;
     margin: 50px 0;
   }
-  &__name, &__content, &__country-name, &__country-name, &__image, &__submit, &__lat, &__lng {
+  &__name, &__content, &__country-name, &__country-name, &__image, &__submit, &__lat, &__lng, &__tag {
     display: block;
     width: 50%;
     margin: 30px auto;
