--- a/app/views/heritages/new.html.erb
+++ b/app/views/heritages/new.html.erb
@@ -7,6 +7,7 @@
     <%= f.text_field :lat, placeholder: "緯度", class: 'heritage-form__lat' %>
     <%= f.text_field :lng, placeholder: "経度", class: 'heritage-form__lng' %>
     <%= f.file_field :images, multiple: true, class: "heritage-form__image" %>
+    <%= f.collection_check_boxes :tag_ids, Tag.all, :id, :name, class: "heritage-form__tag" %>
     <%= f.submit "登録", class: "heritage-form__submit" %>
   <% end %>
 </div>
