--- a/app/assets/stylesheets/module/header_search_form.scss
+++ b/app/assets/stylesheets/module/header_search_form.scss
@@ -5,14 +5,14 @@
   top: 10px;
   left: 50%;
   transform: translate(-50%, 0);
-  width: 300px;
+  width: 25vw;
   padding: 10px 20px;
   border: 0.5px solid #9c9c9c;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
   border-radius: 30px;
   cursor: pointer;
   background-color: #fff;
-  transition: all 0.1s;
+  margin-top: 10px;
   &__placeholder {
     color: #aaaaaa;
   }
@@ -23,13 +23,6 @@
 }
 .header-search-form:hover {
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
-}
-header .active-form {
-  width: 500px;
-  top: 100px;
-  height: 80px;
-  border-radius: 40px;
-  transition: all 0.2s;
 }
 
 @media (max-width: 767px) {
