--- a/app/assets/stylesheets/module/header_search_container.scss
+++ b/app/assets/stylesheets/module/header_search_container.scss
@@ -10,8 +10,33 @@
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
   border-radius: 30px;
   z-index: 1000;
+  padding: 20px;
 }
 .header-search-active {
   top: 50%;
   transition: all 0.1s;
+}
+.continent-search-block {
+  &__title {
+    font-size: 2rem;
+  }
+}
+.continent-search-list {
+  display: inline-grid;
+  grid-auto-flow: column;  
+  grid-template-rows: 1fr 1fr;
+  row-gap: 10px;
+  column-gap: 20px;
+  padding: 10px;
+  height: 120px;
+  &__name {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 120px;
+    padding: 10px 20px;
+    border: 0.5px solid #9c9c9c;
+    border-radius: 20px;
+    cursor: pointer;
+  }
 }
