--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -87,15 +87,15 @@
   <div class="search-popup-inner">
     <p class="search-popup-inner__title">国</p>
     <div class="search-nav-link">
-      <% @continents.each do |continent| %>
-        <div class="search-nav-link__item" id= "nav-item-<%= continent.id %>">
+      <% @continents.each_with_index do |continent, index| %>
+        <div class="search-nav-link__item <%= 'selected' if index == 0 %>" data-id="<%= continent.id %>" id="item-<%= continent.id %>">
           <%= continent.name %>
         </div>
       <% end %>
     </div>
     <div class="search-link-list">
       <% @continents.each_with_index do |continent, index| %>
-        <div class="search-link-block<%= ' selected' if index == 0 %>" id= "nav-item-<%= continent.id %>">
+        <div class="search-link-block <%= 'hide' if index >= 1 %>" data-id="<%= continent.id %>">
           <% continent.countries.each do |country| %>
             <%= link_to country.name, root_url, class:"search-link-block__item" %>
           <% end %>
@@ -133,5 +133,43 @@ document.addEventListener("DOMContentLoaded", function() {
   //   }
   // })
   document.getElementById('gray-out').classList.remove('hide');
+
+  // <% @continents.each do |continent| %>
+  //   var navItem = document.getElementById(`nav-item-<%= continent.id %>`);
+  //   navItem.addEventListener('click', function() {
+  //     toggleCountryList(<%= continent.id %>);
+  //   });
+  // <% end %>
+  // function toggleCountryList(continent_id) {
+  //   <% @continents.each do |continent| %>
+  //     var countryBlock = document.getElementById(`continent-<%= continent.id %>-countries`);
+  //     if (<%= continent.id %> === continent_id) {
+  //       countryBlock.classList.remove("hide");
+  //     } else {
+  //       countryBlock.classList.add("hide");
+  //     }
+  //   <% end %>
+  // }
+
+  var navItems = document.querySelectorAll('.search-nav-link__item');
+  navItems.forEach(function(navItem) {
+    navItem.addEventListener('click', function() {
+      var continentId = navItem.dataset.id;
+      toggleCountryList(continentId, navItem);
+    });
+  });
+  function toggleCountryList(selectedContinentId,selectedContinent) {
+    var countryBlocks = document.querySelectorAll('.search-link-block');
+    selectedContinent.classList.add('selected');
+    countryBlocks.forEach(function(countryBlock) {
+      var continentId = countryBlock.dataset.id
+      if (continentId === selectedContinentId) {
+        countryBlock.classList.remove('hide');
+      } else {
+        countryBlock.classList.add('hide');
+        document.getElementById(`item-${continentId}`).classList.remove('selected');
+      }
+    });
+  }
 });
 </script>
