検索ポップアップのスマホ版の不具合を修正

--- a/app/assets/stylesheets/module/header_search_popup.scss
+++ b/app/assets/stylesheets/module/header_search_popup.scss
@@ -105,6 +105,9 @@
     z-index: 1000;
     padding: 20px;
   }
+  .header-search-active {
+    top: 0;
+  }
   .search-link-list {
     column-gap: 10px;
     width: 95vw;
