--- a/app/assets/stylesheets/module/top_header.scss
+++ b/app/assets/stylesheets/module/top_header.scss
@@ -6,23 +6,45 @@
   padding: 0 20px;
   background-color: #fff;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  &__hr {
-    width: 100vw;
-    border: 0.5px solid #ebebeb;
-    margin: 0;
-  }
 }
 .top-link-list {
   display: flex;
+  justify-content: center;
   gap: 20px;
-  width: 90vw;
-  margin: 0 auto;
   padding: 10px 0;
+  width: 100%;
+  white-space: nowrap;
+  overflow-x: auto;
+  height: 40px;
 }
-.link-container {
+.continent-wrapper {
   display: flex;
-  flex-direction: column;
   align-items: center;
+  cursor: pointer;
+  position: relative;
+  &__name {
+    display: inline-block;
+    color: #757575;
+    padding-right: 3px;
+  }
+  &__arrow-icon {
+    transform: rotate(90deg);
+    transition: all 0.2s;
+  }
+  :hover {
+    color: #0f84ff;
+  }
+}
+.selected-continent {
+  .continent-wrapper{
+    &__arrow-icon {
+      transform: rotate(-90deg);
+      transition: all 0.2s;
+    }
+    &__name {
+      color: #0f84ff;
+    }
+  }
 }
 
 @media (max-width: 767px) {
@@ -32,6 +54,7 @@
     }
   }
   .top-link-list {
-    padding: 5px 0;
+    padding: 5px 20px;
+    justify-content: left;
   }
 }
