--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,8 +3,8 @@
     <%= link_to image_tag("Herigo_logo.png", size: "80x60"), root_url, class: "pc-header__logo-img" %>
     <%= link_to "Herigo", root_url, class: "pc-header__logo-name" %>
     <div class="header-search-block">
-      <%= form_with url: root_path, method: :get, local: true, id: 'search-form', class: 'header-search-form' do %>
-        <%= text_field_tag :query, params[:query], placeholder: '世界遺産名で検索', id: 'search-input', class: 'header-search-form__input' %>
+      <%= form_with url: search_path, method: :get, local: true, class: 'header-search-form' do |f| %>
+        <%= f.text_field :query, placeholder: '世界遺産名で検索', class: 'header-search-form__input' %>
         <%= image_tag ("search.svg"), size: '25x25', class:"header-search-form__search-icon" %>
       <% end %>
     </div>
@@ -41,8 +41,8 @@
     <div class="default-header" id="default_header">
       <%= link_to image_tag("Herigo_logo.png", size: "60x45"), root_url, class: "header-center-block__logo-img" %>
       <div class="header-search-block">
-        <%= form_with url: root_path, method: :get, local: true, id: 'search-form', class: 'header-search-form' do %>
-          <%= text_field_tag :query, params[:query], placeholder: '世界遺産名で検索', id: 'search-input', class: 'header-search-form__input' %>
+        <%= form_with url: root_path, method: :get, local: true, class: 'header-search-form' do |f| %>
+          <%= f.text_field :query, placeholder: '世界遺産名で検索', class: 'header-search-form__input' %>
           <%= image_tag ("search.svg"), size: '25x25', class:"header-search-form__search-icon" %>
         <% end %>
       </div>
