--- a/app/assets/stylesheets/module/continent_header.scss
+++ b/app/assets/stylesheets/module/continent_header.scss
@@ -6,6 +6,7 @@
   padding: 0 20px;
   background-color: #fff;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  z-index: 100;
 }
 .continent-btn-list {
   display: flex;
